Fix checkstyle error